--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <header>
     <meta name="project2">
     <title>Second Project</title>
-    <link rel="stylesheet" href="main.CSS">
+    <link rel="stylesheet" href="main.css">
 </header>
 <div class="op"> 
  <div class="ju">
